--- a/src/component/Home/styles.scss
+++ b/src/component/Home/styles.scss
@@ -1,9 +1,5 @@
 .welcome {
-    margin: 50px;
-}
-
-h1 {
-    letter-spacing: 10px;
+    margin-top: 50px;
 }
 
 p {
@@ -84,8 +80,4 @@ p {
     justify-content: center;
     align-items: center;
     color: white;
-}
-
-.greet  {
-    text-transform: capitalize;
 }
